re PR c++/11928 (c++ typedef handling)

PR c++/11928
	* search.c (add_conversions): Avoid adding two conversion
	operators for the same type.

	PR c++/11928
	* g++.dg/inherit/conv1.C: New test.

From-SVN: r70936